src/seqvars/query/schema/snapshots/varfish_server_worker__seqvars__query__schema__data__tests__sequence_variant_from_vcf@Case_1.ingested.vcf.snap
---
source: src/seqvars/query/schema/data.rs
expression: "&seqvar"
---
vcf_variant:
  chrom: "17"
  pos: 41249263
  ref_allele: G
  alt_allele: A
call_infos:
  Case_1_father-N1-DNA1-WGS1:
    sample: Case_1_father-N1-DNA1-WGS1
    genotype: /0/0
    gq: 99
    dp: 52
    ad: 0
    ps: ~
  Case_1_index-N1-DNA1-WGS1:
    sample: Case_1_index-N1-DNA1-WGS1
    genotype: /0/0
    gq: 99
    dp: 46
    ad: 0
    ps: ~
  Case_1_mother-N1-DNA1-WGS1:
    sample: Case_1_mother-N1-DNA1-WGS1
    genotype: /0/1
    gq: 99
    dp: 42
    ad: 21
    ps: ~
ann_fields:
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: LOW
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007294.4
    feature_biotype:
      - Coding
      - ManeSelect
    rank:
      ord: 8
      total: 23
    hgvs_t: c.591C>T
    hgvs_p: p.Cys197=
    tx_pos:
      ord: 704
      total: 7088
    cds_pos:
      ord: 591
      total: 5592
    protein_pos:
      ord: 197
      total: 1864
    distance: 0
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: LOW
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007297.4
    feature_biotype:
      - Coding
    rank:
      ord: 7
      total: 22
    hgvs_t: c.450C>T
    hgvs_p: p.Cys150=
    tx_pos:
      ord: 644
      total: 7028
    cds_pos:
      ord: 450
      total: 5451
    protein_pos:
      ord: 150
      total: 1817
    distance: 0
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: LOW
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007298.3
    feature_biotype:
      - Coding
    rank:
      ord: 7
      total: 22
    hgvs_t: c.591C>T
    hgvs_p: p.Cys197=
    tx_pos:
      ord: 610
      total: 3682
    cds_pos:
      ord: 591
      total: 2280
    protein_pos:
      ord: 197
      total: 760
    distance: 0
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: LOW
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007299.4
    feature_biotype:
      - Coding
    rank:
      ord: 8
      total: 22
    hgvs_t: c.591C>T
    hgvs_p: p.Cys197=
    tx_pos:
      ord: 698
      total: 3696
    cds_pos:
      ord: 591
      total: 2100
    protein_pos:
      ord: 197
      total: 700
    distance: 0
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: A
    consequences:
      - splice_region_variant
      - synonymous_variant
    putative_impact: LOW
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007300.4
    feature_biotype:
      - Coding
    rank:
      ord: 8
      total: 24
    hgvs_t: c.591C>T
    hgvs_p: p.Cys197=
    tx_pos:
      ord: 704
      total: 7151
    cds_pos:
      ord: 591
      total: 5655
    protein_pos:
      ord: 197
      total: 1885
    distance: 0
    strand: -1
    messages: ~
population_frequencies:
  gnomad_exomes:
    an: 31398
    hom: 0
    het: 56
    hemi: 0
  gnomad_genomes:
    an: 251304
    hom: 0
    het: 369
    hemi: 0
  gnomad_mtdna:
    an: 0
    hom: 0
    het: 0
  helixmtdb:
    an: 0
    hom: 0
    het: 0
  inhouse:
    an: 0
    hom: 0
    het: 0
    hemi: 0
