src/seqvars/query/schema/snapshots/varfish_server_worker__seqvars__query__schema__data__tests__sequence_variant_from_vcf@dragen.ingested.vcf.snap
---
source: src/seqvars/query/schema/data.rs
expression: "&seqvar"
---
vcf_variant:
  chrom: "17"
  pos: 41256074
  ref_allele: CA
  alt_allele: C
call_infos:
  CASE:
    sample: CASE
    genotype: "|0|1"
    quality: 47
    dp: 32
    ad: 14
    phasing_id: 41256074
ann_fields:
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007294.4
    feature_biotype:
      - Coding
      - ManeSelect
    rank:
      ord: 6
      total: 22
    hgvs_t: c.441+64del
    hgvs_p: p.?
    tx_pos:
      ord: 554
      total: 7088
    cds_pos:
      ord: 441
      total: 5592
    protein_pos: ~
    distance: -64
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007297.4
    feature_biotype:
      - Coding
    rank:
      ord: 5
      total: 21
    hgvs_t: c.300+64del
    hgvs_p: p.?
    tx_pos:
      ord: 494
      total: 7028
    cds_pos:
      ord: 300
      total: 5451
    protein_pos: ~
    distance: -64
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007298.3
    feature_biotype:
      - Coding
    rank:
      ord: 5
      total: 21
    hgvs_t: c.441+64del
    hgvs_p: p.?
    tx_pos:
      ord: 460
      total: 3682
    cds_pos:
      ord: 441
      total: 2280
    protein_pos: ~
    distance: -64
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007299.4
    feature_biotype:
      - Coding
    rank:
      ord: 6
      total: 21
    hgvs_t: c.441+64del
    hgvs_p: p.?
    tx_pos:
      ord: 548
      total: 3696
    cds_pos:
      ord: 441
      total: 2100
    protein_pos: ~
    distance: -64
    strand: -1
    messages: ~
  - allele:
      Alt:
        alternative: C
    consequences:
      - intron_variant
    putative_impact: MODIFIER
    gene_symbol: BRCA1
    gene_id: "HGNC:1100"
    feature_type:
      SoTerm:
        term: Transcript
    feature_id: NM_007300.4
    feature_biotype:
      - Coding
    rank:
      ord: 6
      total: 23
    hgvs_t: c.441+64del
    hgvs_p: p.?
    tx_pos:
      ord: 554
      total: 7151
    cds_pos:
      ord: 441
      total: 5655
    protein_pos: ~
    distance: -64
    strand: -1
    messages: ~
population_frequencies:
  gnomad_exomes:
    an: 20150
    hom: 2725
    het: 5476
    hemi: 0
  gnomad_genomes:
    an: 0
    hom: 0
    het: 0
    hemi: 0
  gnomad_mtdna:
    an: 0
    hom: 0
    het: 0
  helixmtdb:
    an: 0
    hom: 0
    het: 0
  inhouse:
    hom: 0
    het: 0
    hemi: 0
    total: 0
